--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="app.js"></script>
   </head>
-  <body ng-app="flapperNews" ng-controller="MainCtrl">
-    <div ng-repeat="post in posts">
-      {{post}}
+  <body ng-app="flapperNews" ng-controller="MainController">
+    <div ng-repeat="post in posts | orderBy: '-upvotes'">
+      <span ng-click="incrementUpvotes(post)">^</span>
+      {{post.title}} -- upvotes: {{post.upvotes}}
     </div>
+    <form>
+        <!-- ng-model tells which property from $scope in controller to bind to -->
+    	<input type="text" ng-model="title"></input>
+    	<button ng-click="addPost()">Post</button>
+    </form>
+    
   </body>
 </html>
